<!-- Corine Jacobs
     10001326
     Corine_J@MSN.com -->

<resources>
    <string name="app_name">Mume</string>

    <string name="searchtitle_textview_text">Search</string>
    <string name="searchbar_edittext_hint">search for...</string>
    <string name="help_menuitem_title">Help</string>
    <string name="share_button_text">Share</string>
    <string name="rijksmuseum_acknowledgement_textview_text">Rijksmuseum Collection</string>
    <string name="startedit_button_text">Meme it!</string>
    <string name="artisttitle_textview_text">Artist</string>
    <string name="titletitle_textview_text">Title</string>
    <string name="datingtitle_textview_text">Dating</string>
    <string name="materialstitle_textview_text">Materials</string>
    <string name="gobackhelp_dialog_negativebutton">Go back</string>
    <string name="helptext_dialog_message">HELP\n\nMuseum Memes (Mume) is an app to make memes using images
        from the Rijksmuseum collection. Start your search from the searchbar, then select the image
        you would like to edit. Once the image is selected you can press the \'meme it\'-button to
        start editing.\n\nOn the opening screen of the app you can also view the latest memes from
        the official \'Classical Art Memes\' Facebook page. Please make sure you are logged in to
        Facebook to see these images. You can log in by clicking the Facebook logo at the top of
        the screen.\n\nFor questions and suggestions please contact me at: 
        museummemes@outlook.com.\n\n\nAPIs\n\nThis app was developed using the Rijksmuseum API, Facebook Graph API
        and the Adobe Creative Suite.\n\n\nREPORTING BUGS\n\nWant to report a bug? Please send me an email
        with a detailed description of the bug: museummemes@outlook.com\n\n\nPRIVACY POLICY\n\nNo personal
        information will be collected nor used by this app. We do not give, share, sell, or transfer any
        personal information to a third party unless required by law. The Facebook login is only used to retrieve the
        Classical Art Memes photos.\nThe privacy policy may be updated. Please check this dialog regularly
        to ensure you are familiar with any changes.\nIf you have
        any concerns regarding your personal info or have any questions,
        please contact me at: museummemes@outlook.com\n\n\nLEGAL\n\nFor any other legal concerns
        (i.e. copyright) please also contact me at: museummemes@outlook.com
    </string>
    <string name="helptitle_dialog_title">Information</string>
    <string name="sendto_shareintent_title">Share with...</string>
    <string name="undertitlesearch_textview_text">and make your own memes</string>
    <string name="fbimageheader_textview_text">Classical Art Memes:</string>
    <string name="viewonfb_button_text">View on Facebook</string>
    <string name="openfbpage_button_text">Visit the Facebook page</string>
    <string name="nointernet_toast_text">No internet connection</string>
    <string name="noresults_textview_text">No search-results</string>
    <string name="failfacebooklogin_toast_text">Facebook login failed</string>
    <string name="facebooklogin_dialog_title">Facebook</string>
    <string name="facebooklogin_dialog_message">Login with Facebook to see the latest memes from the
        official \'Classical Art Memes\' Facebook page.</string>
    <string name="facebooklogin_dialog_negativebutton">No thanks</string>
    <string name="facebooklogin_dialog_positivebutton">Login</string>
    <string name="facebooklogout_dialog_title">Facebook</string>
    <string name="facebooklogout_dialog_message">You are currently logged in to Facebook. Would you
        like to log out?</string>
    <string name="facebooklogout_dialog_negativebutton">Cancel</string>
    <string name="facebooklogout_dialog_positivebutton">Logout</string>
    <string name="pleaseloginfb_textview_text">Login with Facebook to see the memes of the official
        Classical Art Memes Facebook page</string>
    <string name="copyrightwarning_toast_text">Image not available due to copyright reasons</string>
    <string name="nextpage_button_text">next page &gt;</string>
    <string name="prevpage_button_text">&lt; prev page</string>
    <string name="sharesave_dialog_title">Sharing is Caring</string>
    <string name="sharesave_dialog_message">Want to share the meme with your friends or would you
        only like to save the image?</string>
    <string name="sharesave_dialog_negativebutton">Only save</string>
    <string name="sharesave_dialog_positivebutton">Save and Share!</string>
    <string name="imagesaved_toast_text">Image saved</string>

    <!-- used by Facebook API: -->
    <string name="app_id">746901972078034</string>

</resources>
