<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/top_linearlayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignTop="@+id/background_imageview"
    android:layout_centerHorizontal="true"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/searchtitle_textview"
        android:text="@string/searchtitle_textview_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="50sp"
        android:paddingBottom="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/undertitlesearch_textview_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingBottom="15dp"/>


    <EditText
        android:id="@+id/searchbar_edittext"
        android:hint="@string/searchbar_edittext_hint"
        android:drawableRight="@android:drawable/ic_menu_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:paddingBottom="20dp"
        android:textColor="#000000"
        android:textColorHint="#999999"
        android:background="#ffffff"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:elevation="15dp"
        android:imeOptions="actionGo"
        android:inputType="text"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:background="#999999"
        android:layout_margin="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/fbimageheader_textview_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="30sp"
        android:paddingBottom="15dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp" />

</LinearLayout>