<?xml version="1.0" encoding="utf-8"?>

<!-- Corine Jacobs
     10001326
     Corine_J@MSN.com -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/selectedtop_linearlayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SelectedActivity"
    android:elevation="15dp">

    <ScrollView
        android:id="@+id/selected_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/selectedinner_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/artimage_imageview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:src="@mipmap/image_viewfiller" />

            <Button
                android:id="@+id/memeit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/startedit_button_text"
                android:layout_gravity="center_horizontal"
                android:textColor="#ffffff"
                android:textSize="25sp"
                android:background="@drawable/custom_square_button"
                android:elevation="10dp"
                android:onClick="startEdit" />

            <TextView
                android:id="@+id/rijksmuseumacknowledgement_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/rijksmuseum_acknowledgement_textview_text"
                android:layout_gravity="right"
                android:textColor="#7b7b7b"
                android:padding="5dp" />

            <TableLayout
                android:id="@+id/metadata_tablelayout"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:id="@+id/metadata_tablerow_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/artisttitle_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/artisttitle_textview_text"
                        android:padding="10dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/artistnameholder_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_weight="1"/>

                </TableRow>

                <TableRow
                    android:id="@+id/metadata_tablerow_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/titletitle_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/titletitle_textview_text"
                        android:padding="10dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/titleholder_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_weight="1"/>

                </TableRow>

                <TableRow
                    android:id="@+id/metadata_tablerow_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/datingtitle_textiew"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/datingtitle_textview_text"
                        android:padding="10dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/datingholder_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_weight="1"/>

                </TableRow>

                <TableRow
                    android:id="@+id/metadata_tablerow_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/materialstitle_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/materialstitle_textview_text"
                        android:padding="10dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/materialsholder_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_weight="1"/>

                </TableRow>

            </TableLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
