<?xml version="1.0" encoding="utf-8"?>

<!-- Corine Jacobs
     10001326
     Corine_J@MSN.com -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/resultstop_linearlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.ResultsActivity"
    android:background="#c3c3c3">

    <!-- Dummy item to prevent "searchbar_edittext" from receiving focus
         http://stackoverflow.com/questions/1555109 -->
    <LinearLayout
        android:id="@+id/dummy_linearlayout"
        android:orientation="horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"/>

    <EditText
        android:id="@+id/searchbar_edittext"
        android:hint="@string/searchbar_edittext_hint"
        android:drawableRight="@android:drawable/ic_menu_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:layout_marginBottom="1dp"
        android:textColor="#000000"
        android:textColorHint="#999999"
        android:background="#ffffff"
        android:elevation="15dp"
        android:imeOptions="actionGo"
        android:inputType="text"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <GridView
            android:id="@+id/results_gridview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numColumns="2"/>

        <!-- Resource: http://stackoverflow.com/questions/5442183 -->
        <RelativeLayout
            android:id="@+id/loadingpanel_relativelayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="#c3c3c3"
            android:clickable="true">

            <ProgressBar
                android:id="@+id/loading_progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                style="@android:style/Widget.ProgressBar"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/noresults_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noresults_textview_text"
                android:textColor="#000000"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/navigationbuttonholder_linearlayout"
        android:background="@drawable/custom_square_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="15dp">

        <Button
            android:id="@+id/prevpage_button"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:elevation="10dp"
            android:layout_weight="1"
            android:text="@string/prevpage_button_text"
            android:textColor="#000000"
            android:onClick="prevPage"/>

        <Button
            android:id="@+id/nextpage_button"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:elevation="10dp"
            android:layout_weight="1"
            android:text="@string/nextpage_button_text"
            android:textColor="#000000"
            android:onClick="nextPage"/>

    </LinearLayout>

</LinearLayout>
